<resources>
    <string name="app_name">Know Your Government</string>
    <string name="display" />
    <string name="search_menu">search</string>
    <string name="option_about">about</string>
    <string name="designation" />
    <string name="Name" />
    <string name="dev">\u00a9 2017,Narayan Dasari</string>
    <string name="title">Know Your Government</string>
    <string name="ver">Version 1.0</string>
    <string name="AppName" />
    <string name="appname" />
    <string name="app" />
    <string name="name">KnowYourGovernment</string>
    <string name="KnowYourGovernment">name</string>
    <string name="tname">Know Your Government</string>
    <string name="devp">2017, Narayan Dasari</string>
    <string name="vers">Version 1.0</string>
    <string name="rHeading" />
    <string name="rDesignation" />
    <string name="rName" />
    <string name="rParty" />
    <string name="rImage" />
    <string name="rAddress">Address:</string>
    <string name="rAddressLines" />
    <string name="rPhone">Phone:</string>
    <string name="rPhoneNo" />
    <string name="rEmailID">Email:</string>
    <string name="rEmailLine" />
    <string name="rWebsite">Website:</string>
    <string name="rWebsiteLine" />
    <string name="rYouTube" />
    <string name="rGooglePlus" />
    <string name="rFacebook" />
    <string name="rTwitter" />
    <string name="divider" />
    <string name="pHeading" />
    <string name="pDesignation" />
    <string name="pOfficial" />
    <string name="pImage" />
    <string name="ndisplay"/>
    <string name="nText"><b> No Network Connection</b>\n\n" Data cannot be accessed/loaded without an internet connection"</string>
    <string name="rOfficesName" />
    <string name="rOfficialName" />
    <string name="rLparty" />
    <string name="officialImage" />
    <string name="rLAddress">Address:</string>
    <string name="rAddressLine" />
    <string name="rLPhone" translatable="false" />
    <string name="rlphone">Phone:</string>
    <string name="rPhoneL">Phone:</string>
    <string name="rPhoneline" />
    <string name="rEmail">Email:</string>
    <string name="rEmailL" />
    <string name="rWebsiteL">Website:</string>
    <string name="rwebsite" />
    <string name="rYoutube" />
    <string name="rgoogle" />
    <string name="rfacebook" />
    <string name="rtweet" />
    <string name="pImageL" />
    <string name="pofficesname" />
    <string name="pOfficialName" />

</resources>
