<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rep"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/scrollcolor">

    <TextView
        android:id="@+id/rdisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#FF303347"
        android:gravity="center"
        android:text="@string/rHeading"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rOfficesName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/rDesignation"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdisplay" />

    <TextView
        android:id="@+id/rOfficialName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/rName"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rOfficesName" />

    <TextView
        android:id="@+id/rParty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/rParty"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rOfficialName" />

    <ImageView
        android:id="@+id/rimageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/rImage"
        android:onClick="openPhotoActivity"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rParty"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/rAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/rAddress"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rimageView" />

    <TextView
        android:id="@+id/rAddressLines"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickAddress"
        android:text="@string/rAddressLines"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/rAddress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rimageView" />

    <TextView
        android:id="@+id/rPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/rPhone"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rAddressLines"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/rPhoneLine"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickPhone"
        android:text="@string/rPhoneNo"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/rPhone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rAddressLines" />

    <TextView
        android:id="@+id/rEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/rEmailID"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/rPhone"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/rEmailLine"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="14dp"
        android:onClick="onClickEmail"
        android:text="@string/rEmailLine"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintLeft_toRightOf="@+id/rEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rPhoneLine" />

    <TextView
        android:id="@+id/rWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/rWebsite"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/rEmail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/rWebsiteLine"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickWeb"
        android:text="@string/rWebsiteLine"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/rWebsite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rEmailLine" />

    <ImageView
        android:id="@+id/rYouTube"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/rYouTube"
        android:cropToPadding="true"
        android:onClick="youTubeClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rWebsite"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/youtube" />

    <ImageView
        android:id="@+id/rGooglePlus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/rGooglePlus"
        android:cropToPadding="true"
        android:onClick="googlePlusClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rYouTube"
        app:layout_constraintTop_toBottomOf="@+id/rWebsiteLine"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/googleplus" />

    <ImageView
        android:id="@+id/rFacebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/rFacebook"
        android:cropToPadding="true"
        android:onClick="facebookClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintLeft_toRightOf="@+id/rTwitter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rWebsiteLine"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/rTwitter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/rTwitter"
        android:cropToPadding="true"
        android:onClick="twitterClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rGooglePlus"
        app:layout_constraintTop_toBottomOf="@+id/rWebsiteLine"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/twitter" />

</android.support.constraint.ConstraintLayout>